Fix spacing issue at the bottom of portfolio.

--- a/app/styles/pages/_portfolio.scss
+++ b/app/styles/pages/_portfolio.scss
@@ -1,3 +1,10 @@
 // ===============
 // PORTFOLIO
 // ===============
+
+#portfolio {
+  section:last-child,
+  gr-portfolio-entry:last-child {
+    margin-bottom: 0;
+  }
+}
